2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen), (viaInitExa):

	Indent via_accel.c

2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload):

	Fix download from screen which was reusing kernel argument
	data that was altered by the kernel.
	
2006-12-07  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_accel.c: (viaAccelDMADownload),
	(viaExaDownloadFromScreen):

	Reimplement download from screen to something more easily
	debuggable.

2006-12-06  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

        * unichrome/via_driver.c:
 
        Fixed some of the boolean option changes that need
        to be negated such as DisableIRQ. 

2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_memory.c: (viaExaFBSave), (viaOffScreenLinear):

	Cause a "FatalError" if EXA is used with an un-patched Xserver,
	and an illegal save locked memory action is requested.
	
2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIAInitialize3DEngine):

	Proper register names in VIAInitialize3DEngine.
	
2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIALeaveVT), (VIAWriteMode),
	(VIACloseScreen):
	* unichrome/via_vbe.c: (ViaVbeSetMode):

	Now that we initialize the 3D engine every time we write
	mode, make sure this is done before setting up VQ and AGP
	so that those settings persist. The GPU will be unstable
	otherwise.
	Also fix some code comments.
	
2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_driver.c: (VIALeaveVT):

	Force 3D context upload after a VT switch.
	
2006-12-06  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com> 

	* unichrome/via_dri.c: (viaDRIFBMemcpy), (viaDRIOffscreenSave):

	Fix up previous commit for > 16MB sizes. 
