@@ -1638,6 +1638,9 @@ static Bool VIAEnterVT(int scrnIndex, int flags)
     }
     vgaHWUnlock(hwp);
 
+    VIASaveScreen(pScrn->pScreen, SCREEN_SAVER_ON);
+
+
     /* Patch for APM suspend resume, HWCursor has garbage */
     if (pVia->hwcursor)
 	ViaCursorRestore(pScrn); 
@@ -1646,6 +1649,13 @@ static Bool VIAEnterVT(int scrnIndex, int flags)
     if (!pVia->IsSecondary)
         viaRestoreVideo(pScrn);
 
+    if (pVia->NoAccel) {
+	memset(pVia->FBBase, 0x00, pVia->Bpl * pScrn->virtualY);
+    } else {
+	viaAccelFillRect(pScrn, 0, 0, pScrn->displayWidth, pScrn->virtualY,
+			 0x00000000);
+	viaAccelSyncMarker(pScrn);
+    }
 
 #ifdef XF86DRI
     if (pVia->directRenderingEnabled) {
